--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title> my second github repo</title>
 </head>
 <body>
-    
+    <h1> I can push now yaaa</h1>
+    <h2>Mamaaaaaaaaaaaaaaaaa ooooooooo</h2>
+    <h3> coding not ez duh</h3>
 </body>
 </html>
