--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> my second github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> I can push now yaaa</h1>
     <h2>Mamaaaaaaaaaaaaaaaaa ooooooooo</h2>
     <h3> coding not ez duh</h3>
+    <p>Flightless bird, american daydreams.</p>
+    <p>I am coding duh</p>
 </body>
 </html>
