--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3> coding not ez duh</h3>
     <p>Flightless bird, american daydreams.</p>
     <p>I am coding duh</p>
+    <img src="end.png" alt="endgame">
 </body>
 </html>
